# yolov8_csis

./: .settings.toml  Dockerfile  README.md  app.py  human_detection.py  label_utils.py  pyproject.toml
